Fixed the styling of the individual team profile page on tablets

--- a/src/state-components-mobile/team/_team.scss
+++ b/src/state-components-mobile/team/_team.scss
@@ -20,14 +20,14 @@
 
   .return-back-home {
     background: #ffffff;
-    border-top: 1px solid #d0d0d1;
+    border-top: 1px solid #efefef;
     color: #93a2ad;
     display: block;
     line-height: 50px;
     text-align: center;
 
     @include small-and-medium-screens {
-      border-bottom: 1px solid #d0d0d1;
+      border-bottom: 1px solid #efefef;
     }
   }
 }
